add cell_ids sync (misisng fe)
